app/assets/stylesheets/_posts.css.scss
// Place all the styles related to the Posts controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

/* video list */
.video_list {
	background: image_url('background_green.jpg') #b6e3bc;
}
.explore {
	background: image_url('background_info.png') #84b0cb;
}
.explore-jumbotron {
	height: 70px;
}
.video_list h2, .explore h2  {
	display: block;
}
li.media {
	margin: 10px 30px;
	padding: 10px;
}
.series-list li.media p {
	display: block;
}
 li.media p.playtime {
	display: block;
	visibility: visible;
}

@media (min-width: 468px){
	.explore-jumbotron {
		height: 50px;
	}
}

/* video list */
@media (min-width: 768px) {
	.explore-jumbotron {
		height: 110px;
	}

  li.media {
		padding: 0;
		margin: 0;
  }

  li.media div.media-body {
    padding-left: 15px;
  }

  li.media img, li.media p {
    display: block;
  }
  li.media {
    .corner-flag {
			position: absolute;
		}
    padding: 0;
		padding: 20px;
    margin: 0;
  }

  .series-list li {
    background: image_url('badge_fallback.png') 10px 10px no-repeat #5a96bb;
    margin: 0 0 10px;
    padding-left: 80px;
  }

  .tag-list li.media {
    padding-bottom: 11px;
    padding-top: 0;
  }

  ul.tag-list {
    margin-top: 20px;
    margin-bottom: 20px;
  }

  .tag-list h4 {
    margin: 0 !important;
  }
}

